--- a/reptgames.css
+++ b/reptgames.css
@@ -337,6 +337,11 @@ footer {
       height: 250px;
       object-fit: cover;
     }
+    video{
+      width: 500px;
+      height: 250px;
+      object-fit: cover;
+    }
 
     hr {
       margin-top: 5px;
@@ -573,6 +578,18 @@ footer {
   }
   .article-img{
     max-width: 600px; 
+  }
+  .display-case{
+    img {
+      width: 300px;
+      height: 150px;
+      object-fit: cover;
+    }
+    video{
+      width: 300px;
+      height: 150px;
+      object-fit: cover;
+    }
   }
 }
 
