--- a/reptgames.css
+++ b/reptgames.css
@@ -68,7 +68,7 @@ body {
   line-height: 1.5;
   background-color: var(--bg);
   color: var(--text);
-  font-family: system-ui, sans-serif;
+  font-family: sans-serif;
 }
 
 *,
@@ -92,7 +92,7 @@ body {
 
 p {
   margin-top: 10px;
-  font-family: verdana;
+  font-family: sans-serif;
   font-size: 16px;
 }
 
